server_log_debug_13.txt
DEBUG: Starting test_audio_server...
/Users/hectorgarcia/Desktop/LyoBackendJune/venv/lib/python3.12/site-packages/webrtcvad.py:1: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.
  import pkg_resources
DEBUG: Importing DeepgramSTTService...
DEBUG: Importing deepgram client...
DEBUG: Deepgram client imported
DEBUG: Importing LiveTTSService...
DEBUG: Importing ai_resilience_manager...
DEBUG: Importing sqlalchemy...
DEBUG: Importing AsyncSessionLocal...
DEBUG: Importing ClassroomSession...
DEBUG: Importing addictive_feed_algorithm...
DEBUG: Importing highlight_service...
DEBUG: Audio manager imports complete
DEBUG: Importing router auth...
DEBUG: Importing Enhanced User...
DEBUG: Importing Auth Schemas...
DEBUG: Importing AuthService...
DEBUG: Importing Verify Token...
DEBUG: Importing get_db...
DEBUG: Importing RedisRateLimiter...
DEBUG: rate_limiter.py - Imports started
DEBUG: rate_limiter.py - Importing redis
DEBUG: rate_limiter.py - Importing hashlib
DEBUG: rate_limiter.py - Importing settings
DEBUG: rate_limiter.py - Module body executing
DEBUG: Auth routes imports complete
DEBUG: Importing router media...
DEBUG: Importing core database...
DEBUG: Importing auth dependencies...
DEBUG: Importing enhanced user...
DEBUG: Importing enhanced storage...
DEBUG: Importing monitoring...
DEBUG: Importing logging...
DEBUG: Enhanced storage routes imports complete
DEBUG: Importing router feed...
DEBUG: Importing feeds schemas...
DEBUG: Importing FeedsService...
DEBUG: Importing feeds models...
DEBUG: Importing feeds schemas...
DEBUG: Importing ranking service...
DEBUG: Importing stack crud...
DEBUG: Importing stack models...
DEBUG: Importing stack schemas...
DEBUG: Importing video tasks...
DEBUG: Feeds service imports complete
DEBUG: Importing StackItemRead...
DEBUG: Feeds routes imports complete
DEBUG: Importing router stories...
DEBUG: Importing jwt_auth...
DEBUG: Importing User model...
DEBUG: Importing database...
DEBUG: Importing social models...
DEBUG: Stories router imports complete
DEBUG: Importing router messaging...
DEBUG: Importing router notifications...
DEBUG: Importing router tutor...
DEBUG: Importing performance_optimizer...
2026-02-01 14:36:13 [info     ] AI Performance Optimizer initialized
DEBUG: Importing personalization_engine...
Traceback (most recent call last):
  File "/Users/hectorgarcia/Desktop/LyoBackendJune/test_audio_server.py", line 5, in <module>
    from lyo_app.app_factory import create_app
  File "/Users/hectorgarcia/Desktop/LyoBackendJune/lyo_app/app_factory.py", line 25, in <module>
    from .routers import tutor
  File "/Users/hectorgarcia/Desktop/LyoBackendJune/lyo_app/routers/tutor.py", line 4, in <module>
    from lyo_app.ai_agents.multi_agent_v2.tutor_routes import router
  File "/Users/hectorgarcia/Desktop/LyoBackendJune/lyo_app/ai_agents/__init__.py", line 19, in <module>
    from .orchestrator import AIOrchestrator, ai_orchestrator
  File "/Users/hectorgarcia/Desktop/LyoBackendJune/lyo_app/ai_agents/orchestrator.py", line 904, in <module>
    class AIOrchestrator:
  File "/Users/hectorgarcia/Desktop/LyoBackendJune/lyo_app/ai_agents/orchestrator.py", line 1291, in AIOrchestrator
    from .optimization.performance_optimizer import ai_performance_optimizer, OptimizationLevel
  File "/Users/hectorgarcia/Desktop/LyoBackendJune/lyo_app/ai_agents/optimization/__init__.py", line 9, in <module>
    from .personalization_engine import personalization_engine, LearningStyle, PersonalityType
  File "/Users/hectorgarcia/Desktop/LyoBackendJune/lyo_app/ai_agents/optimization/personalization_engine.py", line 247
    global SKLEARN_AVAILABLE
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: name 'SKLEARN_AVAILABLE' is used prior to global declaration
